# game-jam

./: .gitignore  Makefile  README.md  pyproject.toml
game/: __init__.py  __main__.py  app.py  colors.py  defs.py  runner.py
game/levels/: list.py  parameters.py
game/sprites/: canInteractIndicator.py  cloud.py  enemy.py  interaction_indicator.py  manager.py  player.py  timer.py
game/sprites/environment/: conveyor_belt.py  electricPanel.py
game/sprites/persons/: manager.py  person.py  player.py  worker.py
game/sprites/shared/: __init__.py  meters.py  sounds.py
utils/: loader.py
